Relative sizing for video, appears to work on mobile correctly yay

--- a/css/style.less
+++ b/css/style.less
@@ -65,7 +65,7 @@
 /******************** Media query mixins end *********************/
 
 .firstSection {
- padding-top: @height-video + @subsection-padding !important;
+ //padding-top: @height-video + @subsection-padding !important;
 }
 
 .subsection {
@@ -76,9 +76,9 @@
  background-image: url("../images/00_TeaserVideo_Full_Placeholder.Still002.png");
  background-repeat: no-repeat;
  background-size: 100% 100%;
- position: absolute;
+ position: relative;
  left: 0px;
- top: @height-stanford;
+ top: 0px;
  width: 100%;
  height: @height-video;
  max-height: 100vh;
